syntax = "proto3";
package tendermint.p2p;

option go_package = "github.com/YunweiMao/tendermint/proto/tendermint/p2p";

//We need several .proto files
//According to the following analysis we need:
//  gogoproto/gogo.proto
//The paths are
// $GOPATH/pkg/mod/github.com/gogo/protobuf@v1.3.2/ (block.proto will depend on this package)
// . (we compile the .proto file at tendermint project proto/ subfolder)
// The final command we use to compile .pb.go file is
// protoc --proto_path=./:$GOPATH/pkg/mod/github.com/gogo/protobuf@v1.3.2/ --gofast_out=./tendermint/p2p/ ./tendermint/p2p/conn.proto
// (SEEMS we do not need inlcude $GOPATH/pkg/mod/github.com/gogo/protobuf@v1.3.2/protobuf/ path)

import "gogoproto/gogo.proto";
import "tendermint/crypto/keys.proto";

message PacketPing {}

message PacketPong {}

message PacketMsg {
  int32 channel_id = 1 [(gogoproto.customname) = "ChannelID"];
  bool  eof        = 2 [(gogoproto.customname) = "EOF"];
  bytes data       = 3;
}

message Packet {
  oneof sum {
    PacketPing packet_ping = 1;
    PacketPong packet_pong = 2;
    PacketMsg  packet_msg  = 3;
  }
}

message AuthSigMessage {
  tendermint.crypto.PublicKey pub_key = 1 [(gogoproto.nullable) = false];
  bytes                       sig     = 2;
}
