syntax = "proto3";
package tendermint.p2p;

option go_package = "github.com/YunweiMao/tendermint/proto/tendermint/p2p";

//We need several .proto files
//According to the following analysis we need:
//  gogoproto/gogo.proto
//The paths are
// $GOPATH/pkg/mod/github.com/gogo/protobuf@v1.3.2/ (block.proto will depend on this package)
// . (we compile the .proto file at tendermint project proto/ subfolder)
// The final command we use to compile .pb.go file is
// protoc --proto_path=./:$GOPATH/pkg/mod/github.com/gogo/protobuf@v1.3.2/ --gofast_out=./tendermint/p2p/ ./tendermint/p2p/pex.proto
// (SEEMS we do not need inlcude $GOPATH/pkg/mod/github.com/gogo/protobuf@v1.3.2/protobuf/ path)
import "tendermint/p2p/types.proto";
import "gogoproto/gogo.proto";

message PexRequest {}

message PexAddrs {
  repeated NetAddress addrs = 1 [(gogoproto.nullable) = false];
}

message Message {
  oneof sum {
    PexRequest pex_request = 1;
    PexAddrs   pex_addrs   = 2;
  }
}
